la till meta taggen i index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> Padding och Margin funkar inte med denna länk -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style/style.css" />
-    <title>Pärmar & Poesi 🤣🤪😂👁👄👁</title>
+    <title>Pärmar & Poesi - Din bokhandel i Nörrland</title>
+    <meta
+      name="description"
+      content="Välkommen till en bokhandel full av liv! Hos oss hittar du de
+          senaste boknyheterna, inspirerande författarsamtal och unika evenemang
+          för alla med en brinnande passion för litteratur."
+    />
   </head>
 
   <body>
